--- a/labs/05-cli/wiki/get-a-life.wiki
+++ b/labs/05-cli/wiki/get-a-life.wiki
@@ -10,3 +10,7 @@ aflați un mesaj secret.
 
 4. În directorul TODO se află numeroase fișiere. Să creeze o arhivă cu fișierele ce au o dimensiue mai 
 mare de 10MB.
+
+5. Să creeze un script care pornește programul ''firefox'' doar dacă acesta nu există deja. 
+Altfel, nu-l pornește, ci doar afișează informații depsre el. Configurați acest script să 
+ruleze din ''cron'' la fiecare 5 minute. (Hint: TODO link cron)
