--- a/labs/05-cli/wiki/recap.wiki
+++ b/labs/05-cli/wiki/recap.wiki
@@ -1,8 +1,12 @@
 ===== Recapitulare =====
 
-1. În directorul TODO avem fișierul TODO. Compilați-l cu opțiunea ''-Wall'' și rezolvați warning-urile 
-apărute. Creați un Makefile cu 3 reguli: build, run, clean.
-2. La calea TODO se află 2 fișiere C. Compilați-le si linkați-le pentru a obține în final un singur fișier 
-executabil.
-3. În directorul TODO inițializați un repository local de git după care clonați repository-ul TODO. 
-Faceți o modificare asupra oricărui fișier și publicați modificările făcute.
+1. În directorul ''~/uso/labs/05-cli/support/recap/ex1'' avem fișierul ''main.c''. Compilați-l cu opțiunea 
+''-Wall'' și rezolvați warning-urile apărute. Completați regulie din fișierul ''Makefile'' (build, run, 
+clean).
+
+2. La calea ''~/uso/labs/05-cli/support/recap/ex2'' se află 2 fișiere C. Compilați-le si linkați-le 
+pentru a obține, în final, un singur fișier executabil.
+
+3. În directorul ''~/uso/labs/05-cli/support/recap/ex3'' inițializați un repository local de git după care clonați repository-ul 
+de [[https://github.com/lizababu/uso-recap-lab-05-cli.git|aici]]. Creați un fișier C cu numele vostru 
+în care să scrieți orice program simplu și publicați modificările făcute.
