--- a/labs/05-cli/wiki/recap.wiki
+++ b/labs/05-cli/wiki/recap.wiki
@@ -7,6 +7,6 @@ clean).
 2. La calea ''~/uso/labs/05-cli/support/recap/ex2'' se află 2 fișiere C. Compilați-le si linkați-le 
 pentru a obține, în final, un singur fișier executabil.
 
-3. În directorul ''~/uso/labs/05-cli/support/recap/ex3'' inițializați un repository local de git după care clonați repository-ul 
-de [[https://github.com/lizababu/uso-recap-lab-05-cli.git|aici]]. Creați un fișier C cu numele vostru 
-în care să scrieți orice program simplu și publicați modificările făcute.
+3. Creați directorul ''~/uso/labs/05-cli/support/recap/ex3'', inițializați-l cu un repository local 
+de git după care clonați repository-ul de [[https://github.com/lizababu/uso-recap-lab-05-cli.git|aici]]. 
+Creați un fișier C cu numele vostru în care să scrieți orice program simplu și publicați modificările făcute.
