--- a/labs/05-cli/wiki/nice-to-know.wiki
+++ b/labs/05-cli/wiki/nice-to-know.wiki
@@ -1,6 +1,6 @@
 ===== Nice to know =====
 
-=== Aliasuri ===
+==== Aliasuri ====
 
 În shell, un **alias** este un șir de caractere ce poate ține locul oricărei comenzi. Putem vedea ce 
 aliasuri sunt deja create în sistem dacă inspectăm fișierul ''~/.bashrc''. De regulă, ele se află la 
@@ -8,95 +8,8 @@ sfârșitul fișierului sau sunt definite separat în fișierul ''~/.bash_aliase
 fișiere.
 
 <code bash>
-# ~/.bashrc: executed by bash(1) for non-login shells.
-# see /usr/share/doc/bash/examples/startup-files (in the package bash-doc)
-# for examples
-
-# If not running interactively, don't do anything
-case $- in
-    *i*) ;;
-      *) return;;
-esac
-
-# don't put duplicate lines or lines starting with space in the history.
-# See bash(1) for more options
-HISTCONTROL=ignoreboth
-
-# append to the history file, don't overwrite it
-shopt -s histappend
-
-# for setting history length see HISTSIZE and HISTFILESIZE in bash(1)
-HISTSIZE=1000
-HISTFILESIZE=2000
-
-# check the window size after each command and, if necessary,
-# update the values of LINES and COLUMNS.
-shopt -s checkwinsize
-
-# If set, the pattern "**" used in a pathname expansion context will
-# match all files and zero or more directories and subdirectories.
-#shopt -s globstar
-
-# make less more friendly for non-text input files, see lesspipe(1)
-[ -x /usr/bin/lesspipe ] && eval "$(SHELL=/bin/sh lesspipe)"
-
-# set variable identifying the chroot you work in (used in the prompt below)
-if [ -z "${debian_chroot:-}" ] && [ -r /etc/debian_chroot ]; then
-    debian_chroot=$(cat /etc/debian_chroot)
-fi
-
-# set a fancy prompt (non-color, unless we know we "want" color)
-case "$TERM" in
-    xterm-color|*-256color) color_prompt=yes;;
-esac
-
-# uncomment for a colored prompt, if the terminal has the capability; turned
-# off by default to not distract the user: the focus in a terminal window
-# should be on the output of commands, not on the prompt
-#force_color_prompt=yes
-
-if [ -n "$force_color_prompt" ]; then
-    if [ -x /usr/bin/tput ] && tput setaf 1 >&/dev/null; then
-	# We have color support; assume it's compliant with Ecma-48
-	# (ISO/IEC-6429). (Lack of such support is extremely rare, and such
-	# a case would tend to support setf rather than setaf.)
-	color_prompt=yes
-    else
-	color_prompt=
-    fi
-fi
-
-if [ "$color_prompt" = yes ]; then
-    PS1='${debian_chroot:+($debian_chroot)}\[\033[01;32m\]\u@\h\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ '
-else
-    PS1='${debian_chroot:+($debian_chroot)}\u@\h:\w\$ '
-fi
-unset color_prompt force_color_prompt
-
-# If this is an xterm set the title to user@host:dir
-case "$TERM" in
-xterm*|rxvt*)
-    PS1="\[\e]0;${debian_chroot:+($debian_chroot)}\u@\h: \w\a\]$PS1"
-    ;;
-*)
-    ;;
-esac
-
-# enable color support of ls and also add handy aliases
-if [ -x /usr/bin/dircolors ]; then
-    test -r ~/.dircolors && eval "$(dircolors -b ~/.dircolors)" || eval "$(dircolors -b)"
-    alias ls='ls --color=auto'
-    #alias dir='dir --color=auto'
-    #alias vdir='vdir --color=auto'
-
-    alias grep='grep --color=auto'
-    alias fgrep='fgrep --color=auto'
-    alias egrep='egrep --color=auto'
-fi
-
-# colored GCC warnings and errors
-#export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
-
+student@uso:~$ cat ~/.bashrc
+(...)
 # some more ls aliases
 alias ll='ls -alF'
 alias la='ls -A'
@@ -141,17 +54,14 @@ alias boot-cli='systemctl set-default multi-user.target'
 alias boot-gui='systemctl set-default graphical.target'
 </code>
 
-1. Creați-vă propriul alias și verificați că funcționează așa cum vă așteptați. După ce faceți modificări 
-asupra fișierului rulați comanda consultați 
-[[https://stackoverflow.com/questions/2518127/how-do-i-reload-bashrc-without-logging-out-and-back-in|această]] 
-pagină.
+    - Creați-vă propriul alias și verificați că funcționează așa cum vă așteptați. După ce faceți modificări asupra fișierului, consultați [[https://stackoverflow.com/questions/2518127/how-do-i-reload-bashrc-without-logging-out-and-back-in|această]] pagină.
 
-=== Personalizarea shell-ului ===
+==== Personalizarea shell-ului ====
 Prin personalizarea shell-ului înțelegem modificarea unor fișiere de configurație, schimbarea culorilor, 
 să modificăm ''username-ul'', ''hostname-ul'', ''home directory'' și/sau ''prompt-ul'', creearea unor 
-aliasuri etc. La această secțiune vrem să modificăm ''prompt-ul''. Urmăriți tutorialul de 
-[[https://vitux.com/how-to-customize-ubuntu-bash-prompt/|aici]] pentru a modifica prompt-ul să arate în 
-felul următor:
+aliasuri etc. La această secțiune vrem să modificăm ''prompt-ul''.
+
+  - Urmăriți tutorialul de [[https://vitux.com/how-to-customize-ubuntu-bash-prompt/|aici]] pentru a modifica prompt-ul să arate în felul următor:
 
 <code bash>
 tom@disney:~#
@@ -163,7 +73,7 @@ făcute în fișierul ''~/.bashrc'' sunt **persistente**, adică sunt modificăr
 </note>
 
 
-=== Editarea comenzilor ===
+==== Editarea comenzilor ====
 
 De foarte multe ori ni se poate întâmpla să scriem o comandă și să ne dăm seama că e 
 parțial incorectă sau că am scris un cuvânt greșit. Tendința este să abuzăm de tasele
@@ -194,9 +104,9 @@ modificare a comenzii. Pentru a muta cursorul din nou la sfârșitul liniei, fol
 <code>
 student@uso:~/.../support/nice-to-know/editare-comenzi$  gcc -g main.c summ.c -o main
 gcc: error: summ.c: No such file or directory
-</code bash>
+</code>
 
-Observăm faptul că tot avem o problemă cu această comandăs. De data asta am scris greșit numele 
+Observăm faptul că tot avem o problemă cu această comandă. De data asta am scris greșit numele 
 fișierului ''sum.c'' pe care vrem să-l compilăm. Mutați-vă cu cursorul deasupra literei greșite și folosiți 
 combinația ''CTRL + D'' pentru a o șterge. Dacă vrem să stergem tot la dreapta (până ajungem la primul spațiu) 
 folosim combinația ''Alt + D''. 
@@ -209,7 +119,7 @@ Pentru mai multe exemple de acest gen puteți consula website-ul de
 [[https://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/|aici]].
 </note>
 
-=== Variabile de mediu ===
+==== Variabile de mediu ====
 Pentru a afișa variabilele de mediu din sistem, folosiți comanda ''env''.
 
 <code>
@@ -235,11 +145,9 @@ student@uso:~/uso.git/labs/$ echo $OLDPWD
 /home/student/uso.git
 </code>
 
-1. Completați fișierul ''~/uso.git/labs/05-cli/support/nice-to-know/env/print_env.c'' pentru a afișa 
-variabilele de mediu. Folosiți al treilea argument al funcției ''main''. 
-(Hint: urmăriți explicațiile de [[https://www.sanfoundry.com/c-program-environment-variable/|aici]])
+    - Completați fișierul ''~/uso.git/labs/05-cli/support/nice-to-know/env/print_env.c'' pentru a afișa variabilele de mediu. Folosiți al treilea argument al funcției ''main''. (Hint: urmăriți explicațiile de [[https://www.sanfoundry.com/c-program-environment-variable/|aici]])
 
-=== Variabila de mediu PATH ===
+==== Variabila de mediu PATH ====
 
 Variabila de mediu ''PATH'' conține diverse căi din sistem în care se caută binarele rulate de noi în terminal.
 Folosim comanda ''echo $PATH'' pentru a afișa ce conține ea.
@@ -254,7 +162,5 @@ Concret, se pune problema: de unde știe sistemul să ruleze binarul ''/usr/bin/
 ''ls'' dacă nu avem un **alias** pentru el? El va căuta în căile reținute de variabila ''PATH'' executabilul  
 numit ''ls''.
 
-1. Creați un program C numit ''sum.c'' care să calculeze suma a două numere citite de la tastatură. 
-Compilați-l și obțineți executabilul ''sum''. Rulați programul pentru a vă asigura că totul este în regulă.
-2. Modificați variabila ''PATH'' astfel încât programul vostru să poată fi rulat de oriunde din sistem prin 
-comanda ''sum''. (HINT: variabila ''PATH'')
+    - Creați un program C numit ''sum.c'' care să calculeze suma a două numere citite de la tastatură. Compilați-l și obțineți executabilul ''sum''. Rulați programul pentru a vă asigura că totul este în regulă.
+    - Modificați variabila ''PATH'' astfel încât programul vostru să poată fi rulat de oriunde din sistem prin comanda ''sum''. (Atenție! Vrem ca atât executabilele vechi cât și binarul ''sum'' să poată fi rulate de oriunde.)
